<resources>
    <string name="app_name">About1</string>
    <string name="College">THE COLLEGE</string>
    <string name="about">ABOUT US</string>
    <string name="vision">VISION</string>
    <string name="mission">MISSION</string>
    <string name="healthcare">HEALTH CARE</string>
    <string name="transport">TRANSPORT</string>
    <string name="library">LIBRARY</string>
    <string name="canteen">CANTEEN</string>
    <string name="imageview">Image</string>
    <string name="about_us">Lakshmi Narain College of Technology-MCA, Bhopal was established in 1998 to provide quality technical education. It is affiliated to Rajiv Gandhi Proudyogiki Vishwavidyalaya, Bhopal and approved by the All India Council for Technical Education, New Delhi. The college has been consistently maintaining excellent academic results and placements. It is producing the computer professionals of international standards; resulting in almost 100% placement batch after batch. It has the distinction of being the first private MCA College in the state of Madhya Pradesh.   The college has state-of-the-art computing facilities with over 300 computers networked through broadband for Internet access. The college has a fully automated central library with over 17456 books and national/international journals including e-journals. There is continuous college-industry interface. Special efforts are made to groom the students to meet the standards of the industry, both in technical knowledge and soft skills. Interactive seminars on emerging technologies and personality development programmes are arranged to provide wide ranging exposure to students. The college is part of the Campus Connect program with TCS for training students in accordance with the needs of the Industry.</string>
    <string name="mission_lnct">We wish to be the best by producing technically best engineers, who are committed towards the country and the community and possess a sense of service to the humanity   We wish to be the best by producing technical manpower who are new path breakers, develop new products and innovative ideas to cater the special needs of industries.</string>
    <string name="vision_lnct">To create research and development atmosphere and become centre of excellence in higher education where the Industry could look up to us for guidance.  To produce best technical manpower to meet the technical and managerial challenges of modern Industry, who would serve the country and the community.   To acquire a deemed university status.   To be recognized as a world class Institute.</string>
    <string name="transport_lnct">The College has adequate buses which are made available to the students and the faculty members for commuting from various points in the city. All students should make use of the college transport or should stay in the hostel. This facility has made it possible to start the classes in time and thereby helping the academic process. Our bus facilities have enabled us to maintain discipline among students.   The College provides Bus Facilities for all the students which are originated from 95 different sources near by Bhopal city.</string>
    <string name="healthcare_lnct">The Institute provides health care to students, staff and their dependents within campus that includes first aid services and swift medical aid in an emergency. The severe cases are referred to L N Medical Bhopal. Medical consultation and medicines are provided for basic disorders.   The health centre is manned by a medical officer and a healthcare assistant to provide excellent medical care to all the students, staff and faculty at no cost. The Medical Officer manages the various aspects of the facility. They provide quality health care to everyone, evaluates the quality of services, maintains the overall efficiency of the centre and decides the procedures to be followed in case of emergency. Also, vaccinations and yearly checks ups are done at this facility. In the future we look forward in expanding and bringing in high-tech medical equipments to serve better the students of our college.</string>
    <string name="library_lnct">Central Library occupies a place of pride in LNCT and is an essential component of the institute\'s outstanding education mission. It is a most lively place on the campus providing a safe, comfortable and friendly environment that enables learning and advancement of knowledge and promotes discovery and scholarship. The mission of the Central Library is to facilitate creation of new knowledge through acquisition, organization and dissemination of knowledge resources and providing for value added services. All students, faculty members and employees of the Institute are permitted to make use of library facilities. The library has a huge collection of books on Engineering, Management, Science and Humanities offers library services through its various divisions.</string>


</resources>
