<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F5D0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/white"
                android:src="@drawable/lnct" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/cooltext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:background="#006191"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton1"

                android:text="@string/about"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/blue"
                android:padding="10dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <ImageView
                    android:id="@+id/iAboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lnct" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iAboutUs"

                    android:text="@string/about_us" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:background="#006191"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton2"

                android:text="@string/mission"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/purple"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <ImageView
                    android:id="@+id/iMission"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/mission" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iMission"
                    android:text="@string/mission_lnct" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/vission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:background="#006191"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton3"

                android:text="@string/vision"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/orange"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <ImageView
                    android:id="@+id/iVision"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/vision" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iVision"
                    android:text="@string/vision_lnct" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:background="#006191"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton4"

                android:text="@string/transport"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/green"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <ImageView
                    android:id="@+id/itrans"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/transport" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itrans"
                    android:text="@string/transport_lnct" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/healthcare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:background="#006191"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton5"

                android:text="@string/healthcare"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/darkblue"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">


                <ImageView
                    android:id="@+id/iHealth"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/health" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iHealth"
                    android:text="@string/healthcare_lnct" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:background="#006191"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton6"

                android:text="@string/library"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/darkorange"

                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">


                <ImageView
                    android:id="@+id/iLibrary"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/library" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iLibrary"
                    android:text="@string/library_lnct" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>






